k8s/deployment.yaml
deployment.yaml

apiVersion: apps/v1
kind: Deployment

metadata:
  name: app-satc
  namespace: ##K8S_NAMESPACE##
  labels:
    app: app-satc

spec:
  replicas: 1

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  selector:
    matchLabels:
      app: app-satc

  template:
    metadata:
      labels:
        app: app-satc

    spec:
      containers:
      - name: app-satc
        image: docker.io/##DOCKER_USERNAME##/satc-devops:##K8S_TAG##

        ports:
        - containerPort: 5173
          name: http

        # Recursos necessários para HPA
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"

        # Probe de vida
        livenessProbe:
          httpGet:
            path: /health
            port: http ##5173
          initialDelaySeconds: 15
          periodSeconds: 20


---
apiVersion: v1
kind: Service

metadata:
  name: app-satc
  namespace: ##K8S_NAMESPACE##
  labels:
    app: app-satc
      
spec:
  type: ClusterIP

  selector:
    app: app-satc

  ports:
  - port: 80
    targetPort: 5173
    name: http
    protocol: TCP
  
---
# ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: app-satc
  namespace: ##K8S_NAMESPACE##

spec:
  ingressClassName: nginx

  rules:
  - host: ##DOCKER_USERNAME##.app.devops-satc.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-satc
            port:
              number: 80
